<resources>
    <string name="app_name">chaüV</string>
    <string name="email_registration">Sign up</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Vendor  Registration</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="google_api_key05">AIzaSyAsgMEJ-1IsWs81t1PEKy5rsb4dct2SAtU</string>
    <string name="business_name">Business name</string>
    <string name="Vendor_reg">Vendor Registration</string>
    <string name="Vendor_loc">Vendor Locations</string>
    <string name="vendor_uploads">Vendor Uploads</string>
    <string name="title_activity_business_details">Business_details</string>
    <string name="next">Send request</string>
    <string name="Report">Report</string>
    <string name="previous">Previous</string>
    <string name="DEVICE_TOKEN">device_token</string>
    <string name="DEVICE_REG_TOKEN">device_reg_token</string>
    <string name="VENDOR_IMG_URL">VENDOR_IMG_URL</string>
    <string name="LAST_SIGN_IN_VENDOR">LAST_SIGN_IN_VENDOR</string>
    <string name="VENDORS_UPLOAD">Vendor Uploads</string>
    <string name="USER_PAID_ORDES">User Paid Orders</string>
    <string name="Paid_Vendors_Brand_Section">Paid Vendors Brand Section</string>
    <string name="USER_REG">User Registration</string>
    <string name="DELIVERY_REG">Delivery Registration</string>
    <string name="DELIVERY_LOCATION">Delivery Location</string>
    <string name="CACHE_LIST_OF_VENDORS">CACHE_LIST_OF_VENDORS</string>
    <string name="NAIRA">₦</string>
    <string name="VENDOR">VENDOR</string>
    <string name="business_details">Business Details</string>
    <string name="USER_LOCATION">User Location</string>
    <string name="CAT_UPLOADS">Category Uploads</string>
    <string name="having_issues_with_login_or_registration">Having issues with login or registration ?</string>
    <string name="Vendor_reg_payment">Vendor Registration Payment</string>
    <string name="forgot_email">Enter email</string>


</resources>