<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayout"
    android:background="@color/app_back_color"
    tools:context=".UI.Reg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/textEmailReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:src="@mipmap/chau_logo" />


                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/textEmailReg"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_lines"
                    android:hint="Business name"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/name"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/email"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:drawableRight="@drawable/ic_whatsapp_"
                    android:hint="Phone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/phone"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/pass"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <EditText
                    android:id="@+id/business_details"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/input_confirm_password"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_lines"
                    android:hint="@string/business_details"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black" />


                <Spinner
                    android:id="@+id/vendor_category"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/business_details"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:textAlignment="center" />



                <ProgressBar
                    android:id="@+id/category_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/business_details"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"/>


                <Button
                    android:id="@+id/pic_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vendor_category"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:text="Choose Shop Picture"
                    android:textAllCaps="false"
                    android:textColor="#000" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pic_selector"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="15dp"
                    android:background="@drawable/back_button"
                    android:text="Register"
                    android:textAllCaps="false"
                    android:textColor="#000" />

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>